[package]
name = "grm"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.10"
egui_commonmark = "0.16"
directories = "6.0.0"
chrono = "0.4.44"
regex = "1.12.3"
